<?xml version="1.0"?>
<package format="2">
  <name>asv_controls</name>
  <version>0.0.1</version>
  <description>The ROS Package for Thuster Controller(Base Controller) of the ASV</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="akashp1997@gmail.com">Akash Purandare</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
