<?xml version="1.0"?>
<package format="2">
  <name>asv_controls</name>
  <version>0.2.0</version>
  <description>The ROS Package for Thuster Controller(Base Controller) of the ASV</description>

  <maintainer email="akashp1997@gmail.com">Akash Purandare</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>pid</build_depend>
  <build_depend>asv_localization</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>asv_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>

</package>
